--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-      Персональна сторінка Сабадоша Романа 
+      <!DOCTYPE html>
+      <html>
+            <head>
+                <meta charset='utf-8'>    
+      </head>
+      <body>
+        <h1>Персональна сторінка Сабадоша Романа Святославовича</h1>
 
-    
-     Народився 1 грудня 2003 року у місті
+     <p>Народився 1 грудня 2003 року у місті
  Коломия.
      Навчався у спеціалізованій школі номер 1 ім. В. Стефаника.
      Займався різними видами спорту, від плавання до футболу, також займався танцяии.
-     Вільний час провожу з друзями в реалі, або граючи якісь ігри з ними.
-     Автобіографія  Сьогодення  Друзі  Галерея
+     Вільний час провожу з друзями в реалі, або граючи якісь ігри з ними.</p>
+     <p> <a  href="biography.html"> Автобіографія </a> </p> Сьогодення  Друзі  Галерея
   
 
