--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-      <!DOCTYPE html>
+       <!DOCTYPE html>
       <html>
             <head>
                 <meta charset='utf-8'>    
@@ -11,6 +11,7 @@
      Навчався у спеціалізованій школі номер 1 ім. В. Стефаника.
      Займався різними видами спорту, від плавання до футболу, також займався танцяии.
      Вільний час провожу з друзями в реалі, або граючи якісь ігри з ними.</p>
-     <p> <a  href="biography.html"> Автобіографія </a> </p> Сьогодення  Друзі  Галерея
-  
-
+     <p> <a  href="biography.html"> Автобіографія </a> </p>
+     <p> <a  href="novadays.html"> Сьогодення </a> </p>
+     <p> <a  href="friends.html"> Друзі </a> </p>
+     <p> <a  href="gallery.html"> Галерея </a> </p> 
