--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-       <!DOCTYPE html>
+        <!DOCTYPE html>
       <html>
             <head>
                 <meta charset='utf-8'>    
@@ -7,10 +7,10 @@
         <h1>Персональна сторінка Сабадоша Романа Святославовича</h1>
 
      <p>Народився 1 грудня 2003 року у місті
- Коломия.
-     Навчався у спеціалізованій школі номер 1 ім. В. Стефаника.
-     Займався різними видами спорту, від плавання до футболу, також займався танцяии.
-     Вільний час провожу з друзями в реалі, або граючи якісь ігри з ними.</p>
+ Коломия.</p>
+     <p>Навчався у спеціалізованій школі номер 1 ім. В. Стефаника.</p>
+     <p>Займався різними видами спорту, від плавання до футболу, також займався танцями.</p>
+     <p>Вільний час провожу з друзями в реалі, або граючи якісь ігри з ними.</p>
      <p> <a  href="biography.html"> Автобіографія </a> </p>
      <p> <a  href="novadays.html"> Сьогодення </a> </p>
      <p> <a  href="friends.html"> Друзі </a> </p>
