--- a/biography.html
+++ b/biography.html
@@ -1,10 +1,26 @@
-             Автобіографія Сабадоша Романа Святославовича
-                       Назад на головну
-Зміст
-Базова інформація
+<!DOCTYPE html>
+      <html>
+            <head>
+                <meta charset='utf-8'>    
+      </head>
+      <body>             
+            <h1>Автобіографія Сабадоша Романа Святославовича</h1>
+                       <p> <a  href="index.html"> Назад на головну </a> </p>
+<h3 id -"Zmist">Зміст</h3>
+<p> <a  href="#Base info"> Базова інформація </a> </p>
+<p> <a  href="#Childhood"> Дитинство </a> </p>
+<p> <a  href="#School years"> Шкільні роки </a> </p>
+<p> <a  href="#Free time"> Поза школою </a> </p>
+<p> <a  href="#University"> Університет </a> </p>
+
+
+<h2 id -"Base info">1.Базова інформація</h2>
 Народився 1 грудня 2003 року, місто Коломия.
 Ріст 176 см. Вага 55-60кг.
 Має брата.
+Закінчив Коломийську спеціалізовану школу №1 ім В.Стефаника
+Зараз навчається у Прикарпатському національному університеті ім. В. Стефаника
+<p> <a  href="#Zmist"> До змісту </a> </p>
 Дитинство
 Ходив у дитячий садок, а пізніше у школу(Не знаю, що тут ше можна написати)
 Шкільні роки 
