--- a/biography.html
+++ b/biography.html
@@ -15,21 +15,30 @@
 
 
 <h2 id -"Base info">1.Базова інформація</h2>
-Народився 1 грудня 2003 року, місто Коломия.
+<p>Народився 1 грудня 2003 року, місто Коломия.
 Ріст 176 см. Вага 55-60кг.
 Має брата.
 Закінчив Коломийську спеціалізовану школу №1 ім В.Стефаника
-Зараз навчається у Прикарпатському національному університеті ім. В. Стефаника
+Зараз навчається у Прикарпатському національному університеті ім. В. Стефаника</p>
 <p> <a  href="#Zmist"> До змісту </a> </p>
-Дитинство
-Ходив у дитячий садок, а пізніше у школу(Не знаю, що тут ше можна написати)
-Шкільні роки 
-Навчався в Коломийській спеціалізованій школі номер 1 ім В.Стефаника.
+
+<h2 id -"Childhood">1.Дитинство</h2>
+<p>Ходив у дитячий садок, а пізніше у школу(Не знаю, що тут ше можна написати)</p>
+<p> <a  href="#Zmist"> До змісту </a> </p>
+
+<h2 id -"School years">1.Шкільні роки </h2>
+<p>Навчався в Коломийській спеціалізованій школі номер 1 ім В.Стефаника.
 Школа була з поглибленим вивченням іноземних мов, тому з дитинства любив вивчати англійську мову, і завдяки цьому зміг здобути багато різних нагород на олімпіадах
-Під час навчання познайомився з різними людьми, які зіграли важливу роль в формуванні та зміні характеру.
-Поза школою
-Ходив на різні секції, починаючи від гімнастики, закінчуючи плаванням та танцями. Довго на них не затримувався, максимум пів року, бо доволі швидко втрачав інтерес.
-Крім секцій доволі часто проводив час з друзями: гуляючи, або граючи в комп'ютерні ігри.
-Університет
+Під час навчання познайомився з різними людьми, які зіграли важливу роль в формуванні і зміні характеру, формуванні світогляду, тощо.</p>
+<p> <a  href="#Zmist"> До змісту </a> </p>
+
+<h2 id -"Free time">1.Поза школою</h2>
+<p>Ходив на різні секції, починаючи від гімнастики, закінчуючи плаванням та танцями. Довго на них не затримувався, максимум пів року, бо доволі швидко втрачав інтерес.
+Крім секцій доволі часто проводив час з друзями: гуляючи, або граючи в комп'ютерні ігри.</p>
+<p> <a  href="#Zmist"> До змісту </a> </p>
+
+<h2 id -"University">1.Університет</h2>
+<p>Університет
 Навчається у Прикарпатському національному університеті імені В. Стефаника у місті Івано-Франківськ.
-Поступив на спеціальність 122 "Комп'ютерні науки", та планує в майбутньому працювати по професії.
+Поступив на спеціальність 122 "Комп'ютерні науки", та планує в майбутньому працювати по професії.</p>
+<p> <a  href="#Zmist"> До змісту </a> </p>
