--- a/biography.html
+++ b/biography.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-      <html>
-            <head>
-                <meta charset='utf-8'>    
-      </head>
-      <body>             
+<!DOCTYPE HTML>
+ <html>
+<head>
+ <meta charset='utf-8'>
+ <title>Автобіографія Сабадоша Романа Святославовича</title>
+</head>
+<body>
             <h1>Автобіографія Сабадоша Романа Святославовича</h1>
                        <p> <a  href="index.html"> Назад на головну </a> </p>
-<h3 id -"Zmist">Зміст</h3>
+<h3 id ="Zmist">Зміст</h3>
 <p> <a  href="#Base info"> Базова інформація </a> </p>
 <p> <a  href="#Childhood"> Дитинство </a> </p>
 <p> <a  href="#School years"> Шкільні роки </a> </p>
@@ -14,7 +15,7 @@
 <p> <a  href="#University"> Університет </a> </p>
 
 
-<h2 id -"Base info">1.Базова інформація</h2>
+<h2 id ="Base info">1.Базова інформація</h2>
 <p>Народився 1 грудня 2003 року, місто Коломия.
 Ріст 176 см. Вага 55-60кг.
 Має брата.
@@ -22,22 +23,22 @@
 Зараз навчається у Прикарпатському національному університеті ім. В. Стефаника</p>
 <p> <a  href="#Zmist"> До змісту </a> </p>
 
-<h2 id -"Childhood">1.Дитинство</h2>
+<h2 id ="Childhood">1.Дитинство</h2>
 <p>Ходив у дитячий садок, а пізніше у школу(Не знаю, що тут ше можна написати)</p>
 <p> <a  href="#Zmist"> До змісту </a> </p>
 
-<h2 id -"School years">1.Шкільні роки </h2>
+<h2 id ="School years">1.Шкільні роки </h2>
 <p>Навчався в Коломийській спеціалізованій школі номер 1 ім В.Стефаника.
 Школа була з поглибленим вивченням іноземних мов, тому з дитинства любив вивчати англійську мову, і завдяки цьому зміг здобути багато різних нагород на олімпіадах
 Під час навчання познайомився з різними людьми, які зіграли важливу роль в формуванні і зміні характеру, формуванні світогляду, тощо.</p>
 <p> <a  href="#Zmist"> До змісту </a> </p>
 
-<h2 id -"Free time">1.Поза школою</h2>
+<h2 id ="Free time">1.Поза школою</h2>
 <p>Ходив на різні секції, починаючи від гімнастики, закінчуючи плаванням та танцями. Довго на них не затримувався, максимум пів року, бо доволі швидко втрачав інтерес.
 Крім секцій доволі часто проводив час з друзями: гуляючи, або граючи в комп'ютерні ігри.</p>
 <p> <a  href="#Zmist"> До змісту </a> </p>
 
-<h2 id -"University">1.Університет</h2>
+<h2 id ="University">1.Університет</h2>
 <p>Університет
 Навчається у Прикарпатському національному університеті імені В. Стефаника у місті Івано-Франківськ.
 Поступив на спеціальність 122 "Комп'ютерні науки", та планує в майбутньому працювати по професії.</p>
