--- a/biography.html
+++ b/biography.html
@@ -16,11 +16,10 @@
 
 
 <h2 id ="Base info">1.Базова інформація</h2>
-<p>Народився 1 грудня 2003 року, місто Коломия.
-Ріст 176 см. Вага 55-60кг.
-Має брата.
-Закінчив Коломийську спеціалізовану школу №1 ім В.Стефаника
-Зараз навчається у Прикарпатському національному університеті ім. В. Стефаника</p>
+<p>Народився 1 грудня 2003 року, місто Коломия.</p>
+<p>Ріст 176 см. Вага 55-60кг.</p>
+<p>Закінчив Коломийську спеціалізовану школу №1 ім В.Стефаника.</p>
+<p>Зараз навчається у Прикарпатському національному університеті ім. В. Стефаника</p>
 <p> <a  href="#Zmist"> До змісту </a> </p>
 
 <h2 id ="Childhood">1.Дитинство</h2>
@@ -28,14 +27,14 @@
 <p> <a  href="#Zmist"> До змісту </a> </p>
 
 <h2 id ="School years">1.Шкільні роки </h2>
-<p>Навчався в Коломийській спеціалізованій школі номер 1 ім В.Стефаника.
-Школа була з поглибленим вивченням іноземних мов, тому з дитинства любив вивчати англійську мову, і завдяки цьому зміг здобути багато різних нагород на олімпіадах
-Під час навчання познайомився з різними людьми, які зіграли важливу роль в формуванні і зміні характеру, формуванні світогляду, тощо.</p>
+<p>Навчався в Коломийській спеціалізованій школі номер 1 ім В.Стефаника.</p>
+<p>Школа була з поглибленим вивченням іноземних мов, тому з дитинства любив вивчати англійську мову, і завдяки цьому зміг здобути багато різних нагород на олімпіадах</p>
+<p>Під час навчання познайомився з різними людьми, які зіграли важливу роль в формуванні і зміні характеру, формуванні світогляду, тощо.</p>
 <p> <a  href="#Zmist"> До змісту </a> </p>
 
 <h2 id ="Free time">1.Поза школою</h2>
-<p>Ходив на різні секції, починаючи від гімнастики, закінчуючи плаванням та танцями. Довго на них не затримувався, максимум пів року, бо доволі швидко втрачав інтерес.
-Крім секцій доволі часто проводив час з друзями: гуляючи, або граючи в комп'ютерні ігри.</p>
+<p>Ходив на різні секції, починаючи від гімнастики, закінчуючи плаванням та танцями. Довго на них не затримувався, максимум пів року, бо доволі швидко втрачав інтерес.</p>
+<p>Крім секцій доволі часто проводив час з друзями: гуляючи, або граючи в комп'ютерні ігри.</p>
 <p> <a  href="#Zmist"> До змісту </a> </p>
 
 <h2 id ="University">1.Університет</h2>
