--- a/biography.html
+++ b/biography.html
@@ -42,3 +42,10 @@
 Навчається у Прикарпатському національному університеті імені В. Стефаника у місті Івано-Франківськ.
 Поступив на спеціальність 122 "Комп'ютерні науки", та планує в майбутньому працювати по професії.</p>
 <p> <a  href="#Zmist"> До змісту </a> </p>
+<title>HTML line</title>
+<hr align="center" width="100%" size="10"
+color="#000000" />
+
+<p><a href="#zmist">Уверх</a></p>
+</body>
+ </html>
