--- a/biography.html
+++ b/biography.html
@@ -46,6 +46,6 @@
 <hr align="center" width="100%" size="10"
 color="#000000" />
 
-<p><a href="#zmist">Уверх</a></p>
+<p><a href="#Zmist">Уверх</a></p>
 </body>
  </html>
