--- a/gallery.html
+++ b/gallery.html
@@ -1,5 +1,22 @@
-Галерея Сабадоша Романа Святославовича
-Назад на головну
-Мої зоображення
-Зображення у цій папці
-Зоображення онлайн
+<!DOCTYPE HTML>
+ <html>
+<head>
+ <meta charset="utf-8">
+ <title>Галерея Сабадоша Романа Святославовича</title>
+</head>
+
+<body>
+
+<h1>Галерея Сабадоша Романа Святославовича.</h1>
+<p><a href="index.html">Назад на головну</a></p>
+
+<h2>Мої зображення:</h2>
+<h3>Зображення у цій папці:</h3>
+ <img src="640x480.jpg" alt="">
+<h3>Зображення у папці:</h3>
+ <img src="images/640x480.jpg" alt="">
+<h3>Зображення онлайн:</h3>
+<img src="https://place-hold.it/1280x1024/black/pink/grey.gif&text=GoApex&fontsize=16" alt="">
+
+ </body>
+</html>
