--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
-        <!DOCTYPE html>
-      <html>
-            <head>
-                <meta charset='utf-8'>    
-      </head>
-      <body>
-        <h1>Персональна сторінка Сабадоша Романа Святославовича</h1>
+        <!DOCTYPE HTML!>
+<html>
+
+<head>
+ <meta charset="utf-8">
+ <title>Персональна сторінка Сабадоша Романа Святославовича</title>
+ </head>
+
+<body>
+
+
+    <h1>Персональна сторінка Сабадоша Романа Святославовича.</h1>
 
      <p>Народився 1 грудня 2003 року у місті
  Коломия.</p>
      <p>Навчався у спеціалізованій школі номер 1 ім. В. Стефаника.</p>
+     <p>Зараз навчаюсь у Прикарпатському національному університеті ім. В. Стефаника </p>
      <p>Займався різними видами спорту, від плавання до футболу, також займався танцями.</p>
      <p>Вільний час провожу з друзями в реалі, або граючи якісь ігри з ними.</p>
      <p> <a  href="biography.html"> Автобіографія </a> </p>
      <p> <a  href="novadays.html"> Сьогодення </a> </p>
      <p> <a  href="friends.html"> Друзі </a> </p>
      <p> <a  href="gallery.html"> Галерея </a> </p> 
+     </body>
+   </html>
