--- a/friends.html
+++ b/friends.html
@@ -1,10 +1,24 @@
-Друзі Сабадоша Романа Святославовича
-Назад на головну
-Мої друзі
-Відомоста про друзів:
-Прізвище Ім'я Дата Народження Адреса Проживання Контактний Телефон
-Джеймс Кук 10.02.2002 м.Коломия вулиця Х 10 +380548735879
-Едвард Тіч 01.12.2003 м.Коломия вулиця Y 23 +380686584038
-Крістофор Колумб 17.05.2001 м.Коломия вулиця Z 4 +380238405083
-Фернан Магелан 26.09.2004 м.Коломия вулиця Z 20 +380684832097
+<!DOCTYPE html>
+<html>
+
+ <head>
+   <meta charset="utf-8">
+ <title>Друзі Сабадоша Романа Святославовича</title>
+</head>
+  <body>
+<h1>Друзі Сабадоша Романа Святославовича.</h1>
+<p><a href="index.html">Назад на головну</a></p>
+<h2>Мої друзі</h2>
+         <table>
+                <tr><td><b>Прізвище</td><td><b>Ім'я</td><td><b>Дата народження</td><td><b>Адрес проживання</td><td><b>Контактний телефон</td></tr>
+
+  <tr><td>Кук</td><td>Тіч</td><td>Колумб</td><td>Магелан</td></tr>
+                <tr><td>Джеймс</td><td>Едвард</td><td>Крістофор</td><td>Фернан</td></tr>
+                <tr><td>10.02.2002</td><td>01.12.2003</td><td>17.05.2001</td><td>26.09.2004</td></tr>
+                <tr><td>Чорновола 16</td><td>Цегельняна 7</td><td>Мазепи 21</td><td>Івана Франка 4</td></tr>
+                <tr><td>7547876787</td><td>8973594216</td><td>4325677687</td><td>4536565789</td></tr>
+                  </table>
+     </body>
+</html>
+
 
