--- a/friends.html
+++ b/friends.html
@@ -15,10 +15,5 @@
   <tr><td>Кук</td><td>Тіч</td><td>Колумб</td><td>Магелан</td></tr>
                 <tr><td>Джеймс</td><td>Едвард</td><td>Крістофор</td><td>Фернан</td></tr>
                 <tr><td>10.02.2002</td><td>01.12.2003</td><td>17.05.2001</td><td>26.09.2004</td></tr>
-                <tr><td>Чорновола 16</td><td>Цегельняна 7</td><td>Мазепи 21</td><td>Івана Франка 4</td></tr>
-                <tr><td>7547876787</td><td>8973594216</td><td>4325677687</td><td>4536565789</td></tr>
-                  </table>
-     </body>
-</html>
-
-
+                <tr><td>вулиця Х 10</td><td>вулиця Y 23</td><td>вулиця Z 4</td><td>вулиця Z 20</td></tr>
+                <tr><td>+380548735879</td><td>+380686584038</td><td>+380238405083</td><td>+380684832097</td></tr>
