--- a/friends.html
+++ b/friends.html
@@ -17,3 +17,6 @@
                 <tr><td>10.02.2002</td><td>01.12.2003</td><td>17.05.2001</td><td>26.09.2004</td></tr>
                 <tr><td>вулиця Х 10</td><td>вулиця Y 23</td><td>вулиця Z 4</td><td>вулиця Z 20</td></tr>
                 <tr><td>+380548735879</td><td>+380686584038</td><td>+380238405083</td><td>+380684832097</td></tr>
+  </table>
+     </body>
+</html>
