--- a/novadays.html
+++ b/novadays.html
@@ -1,63 +1,101 @@
-Сьогодення Сабадоша Романа Святославовича
-Назад на головну
-Мій типовий список покупок
-Молочні продукти:
-- Молоко 
-- Сметана
-- Масло
-Мясні продукти:
-- Сосиски
-- Ковбаси
-- Стейки
-- Крильця
-Овочі:
-- Цибуля 
-- Огірки 
-- Помідори
-Фрукти:
-- Яблука
-- Банани
-- Виноград
-Мій улюблений десерт - Тірамісу
-Рецепт
-1.Підготувати все необхідне:
-- Взяти бісквітне печиво
-- Зварити еспресо
-- Дати йому охолонути
-- Взяти яйця 
-- Відділити білок від жовтка
-- Помістити білок в посудину
-- Затягніть харчовою плівкою
-- Поставте в холодильник
-2. Взбиваємо жовток:
-- Беремо цукор
-- Засипаємо до жовтка
-- Починаємо взбивати
-- Взбиваємо поки маса не стане схожою на густий, білий крем
-- Додайте Маскарпоне
--Перемішайте, повільно
-3. Білки: 
-- Дістаньте білки з холодильника
-- Додайте солі
-- Збийте міксером на низьких оборотах
-- Коли перетвориться в піну - включіть максимальну швидкість
-- Продовжайте взбивати ше 2-3 хвилини, поки білки не стануть пружними
-- Перевірте чи білки достатньо збились
-- Переверніть миску, якщо нічого не капає і не витікає - значить все гаразд.
-4. Приготування:
-- Білкову масу додайте до сирно-жовткового крему.
-- Змішайте їх до однорідності
-- Холодний еспрессо налийте в тарілку або лоток
-- Візьміть печиво
-- Опускайте печиво по черзі на 2 секунди
-- Візьміть форму
-- Викладіть просочене печиво
-- Зверху викладіть 1/2 об'єму крему і розрівняйте лопаткою. 
-- Повторіть попередні етапи
-- Форму затягніть кулінарною плівкою і поставте в холодильник на 8-10 годин.
-5. Подача:
-- Візьміть какао-порошок
-- Щедро посипте торт перед подачею
-Готово!
+<!DOCTYPE HTML>
+<html>
+
+ <head>
+<meta charset="utf-8"> <title>Сьогодення Сабадоша Романа Святославовича</title>
+ </head>
+
+<body>
+ <h1>Сьогодення Сабадоша Романа Святославовича.</h1>
+<p><a href="index.html">Назад на головну</a></p>
+<h2>Мій типовий список покупок:<h2>
+	<ul>
+<li>Молочні продукти:
+	<ul>
+ <li>Молоко </li>
+ <li>Сметана</li>
+ <li>Масло</li>
+</ul>
+</li>
+<li>Мясні продукти:
+	<ul>
+ <li>Сосиски</li>
+ <li>Ковбаси</li>
+ <li>Стейки</li>
+ <li>Крильця</li>
+ </ul>
+</li>
+<li>Овочі:
+	<ul>
+ <li>Цибуля</li>
+ <li>Огірки</li> 
+ <li>Помідори</li>
+ </ul>
+</li>
+<li>Фрукти:
+	<ul>
+ <li>Яблука</li>
+ <li>Банани</li>
+ <li>Виноград</li>
+</li>
+</ul>
+<h2>Мій улюблений десерт - </h2> 
+<p>Тірамісу</p>
+<p>Рецепт:</p>
+<ol><li>1.Підготувати все необхідне:
+	<ol>
+<li> Взяти бісквітне печиво</li>
+<li> Зварити еспресо</li>
+<li> Дати йому охолонути</li>
+<li> Взяти яйця</li>
+<li> Відділити білок від жовтка</li>
+<li> Помістити білок в посудину</li>
+<li> Затягніть харчовою плівкою</li>
+<li> Поставте в холодильник</li>
+</ol>
+</li>
+<li>2. Взбиваємо жовток:
+	<ol>
+<li> Беремо цукор</li>
+<li> Засипаємо до жовтка</li>
+<li> Починаємо взбивати</li>
+<li> Взбиваємо поки маса не стане схожою на густий, білий крем</li>
+<li> Додайте Маскарпоне</li>
+<li>Перемішайте, повільно</li>
+</ol>
+</li>
+<li>3. Білки:
+<ol> 
+<li> Дістаньте білки з холодильника</li>
+<li> Додайте солі</li>
+<li> Збийте міксером на низьких оборотах</li>
+<li> Коли перетвориться в піну - включіть максимальну швидкість</li>
+<li> Продовжайте взбивати ше 2-3 хвилини, поки білки не стануть пружними</li>
+<li> Перевірте чи білки достатньо збились</li>
+<li> Переверніть миску, якщо нічого не капає і не витікає - значить все гаразд.</li>
+</ol>
+</li>
+4. <li>Приготування:
+	<ol>
+<li> Білкову масу додайте до сирно-жовткового крему.</li>
+<li> Змішайте їх до однорідності</li>
+<li> Холодний еспрессо налийте в тарілку або лоток</li>
+<li> Візьміть печиво</li>
+<li> Опускайте печиво по черзі на 2 секунди</li>
+<li> Візьміть форму</li>
+<li> Викладіть просочене печиво</li>
+<li> Зверху викладіть 1/2 об'єму крему і розрівняйте лопаткою. </li>
+<li> Повторіть попередні етапи</li>
+<li> Форму затягніть кулінарною плівкою і поставте в холодильник на 8-10 годин.</li>
+</ol>
+</li>
+<li>5. Подача:
+	<ol>
+<li> Візьміть какао-порошок</li>
+<li> Щедро посипте торт перед подачею</li>
+</ol>
+</li>
+</ol>
+<p>Готово!</p>
 
 
