--- a/novadays.html
+++ b/novadays.html
@@ -42,7 +42,7 @@
 <h2>Мій улюблений десерт - </h2> 
 <p>Тірамісу</p>
 <p>Рецепт:</p>
-<ol><li>1.Підготувати все необхідне:
+<ol><li>Підготувати все необхідне:
 	<ol>
 <li> Взяти бісквітне печиво</li>
 <li> Зварити еспресо</li>
@@ -54,7 +54,7 @@
 <li> Поставте в холодильник</li>
 </ol>
 </li>
-<li>2. Взбиваємо жовток:
+<li> Взбиваємо жовток:
 	<ol>
 <li> Беремо цукор</li>
 <li> Засипаємо до жовтка</li>
@@ -64,7 +64,7 @@
 <li>Перемішайте, повільно</li>
 </ol>
 </li>
-<li>3. Білки:
+<li> Білки:
 <ol> 
 <li> Дістаньте білки з холодильника</li>
 <li> Додайте солі</li>
@@ -75,7 +75,7 @@
 <li> Переверніть миску, якщо нічого не капає і не витікає - значить все гаразд.</li>
 </ol>
 </li>
-4. <li>Приготування:
+ <li>Приготування:
 	<ol>
 <li> Білкову масу додайте до сирно-жовткового крему.</li>
 <li> Змішайте їх до однорідності</li>
@@ -89,7 +89,7 @@
 <li> Форму затягніть кулінарною плівкою і поставте в холодильник на 8-10 годин.</li>
 </ol>
 </li>
-<li>5. Подача:
+<li> Подача:
 	<ol>
 <li> Візьміть какао-порошок</li>
 <li> Щедро посипте торт перед подачею</li>
@@ -97,5 +97,7 @@
 </li>
 </ol>
 <p>Готово!</p>
+</body>
+</html>
 
 
