--- a/index.html
+++ b/index.html
@@ -4,7 +4,34 @@
 <head>
  <meta charset="utf-8">
  <title>Персональна сторінка Сабадоша Романа Святославовича</title>
+ <style> 
+header p:nth-child(1) a:link, a:active  {
+    color: green;   
+}
+header p:nth-child(1) a:visited {
+    color: red;   
+}
+header p:nth-child(2) a:link, a:active  {
+    color: orange;   
+}
+header p:nth-child(2) a:visited {
+    color: yellow;
+    }  
+    header p:nth-child(3) a:link, a:active  {
+    color: olive;   
+}
+header p:nth-child(3) a:visited {
+    color: lime;
+    }  
+    header p:nth-child(4) a:link, a:active  {
+    color: aqua;   
+}
+header p:nth-child(4) a:visited {
+    color: blue;
+    }  
+ </style>
  </head>
+
 
 <body>
 
@@ -17,9 +44,12 @@
      <p>Зараз навчаюсь у Прикарпатському національному університеті ім. В. Стефаника </p>
      <p>Займався різними видами спорту, від плавання до футболу, також займався танцями.</p>
      <p>Вільний час провожу з друзями в реалі, або граючи якісь ігри з ними.</p>
+
+     <header>
      <p> <a  href="biography.html"> Автобіографія </a> </p>
      <p> <a  href="novadays.html"> Сьогодення </a> </p>
      <p> <a  href="friends.html"> Друзі </a> </p>
      <p> <a  href="gallery.html"> Галерея </a> </p> 
+ </header>
      </body>
    </html>
