--- a/novadays.html
+++ b/novadays.html
@@ -2,7 +2,26 @@
 <html>
 
  <head>
-<meta charset="utf-8"> <title>Сьогодення Сабадоша Романа Святославовича</title>
+<meta charset="utf-8"> 
+<title>Сьогодення Сабадоша Романа Святославовича</title>
+<style>
+  ul li:nth-child(odd){
+background-color: grey;
+color:purple;
+  }
+  ul li:nth-child(even){
+background-color: white;
+  }
+  ol li:nth-child(3):hover{
+    cursor: pointer;
+  }
+  ol li:nth-child(5):hover{
+    cursor: pointer;
+  }
+  ol li:nth-child(4){
+    background-color: lime;
+  }
+</style>
  </head>
 
 <body>
