--- a/gallery.html
+++ b/gallery.html
@@ -12,11 +12,11 @@
 
 <h2>Мої зображення:</h2>
 <h3>Зображення у цій папці:</h3>
- <img src="640x480.jpg" alt="">
+ <img src="640x480.jpg" alt="image1">
 <h3>Зображення у папці:</h3>
- <img src="images/640x480.jpg" alt="">
+ <img src=lime&fontsize=18.gif alt="image2">
 <h3>Зображення онлайн:</h3>
-<img src="https://place-hold.it/1280x1024/black/pink/grey.gif&text=GoApex&fontsize=16" alt="">
+<img src="https://place-hold.it/1280x1024/black/pink/grey.gif&text=GoApex&fontsize=16" alt="image3">
 
  </body>
 </html>
