--- a/gallery.html
+++ b/gallery.html
@@ -14,7 +14,7 @@
 <h3>Зображення у цій папці:</h3>
  <img src="640x480.jpg" alt="image1">
 <h3>Зображення у папці:</h3>
- <img src=lime&fontsize=18.gif alt="image2">
+ <img src="images/480x480.png" alt="image2">
 <h3>Зображення онлайн:</h3>
 <img src="https://place-hold.it/1280x1024/black/pink/grey.gif&text=GoApex&fontsize=16" alt="image3">
 
