--- a/pr4/biography.html
+++ b/pr4/biography.html
@@ -36,7 +36,7 @@ text-decoration: none;
 }
 p.info {
     background-color: red;
-    color: olive;
+    color: Black;
 }
 p.child {
     background-color: aqua;
@@ -48,7 +48,7 @@ p.school {
 }
 p.free {
     background-color: teal;
-    color: blanchedalmond;
+    color: White;
 }
 p.univ {
     background-color: purple;
