--- a/pr4/index.html
+++ b/pr4/index.html
@@ -5,6 +5,13 @@
  <meta charset="utf-8">
  <title>Персональна сторінка Сабадоша Романа Святославовича</title>
  <style> 
+  h1 { 
+    text-align: center;
+    font-size: 24px; 
+   }
+   p {
+       font-size: 19.2px;
+   }
 header p:nth-child(1) a:link, a:active  {
     color: green;   
 }
