--- a/pr4/biography.html
+++ b/pr4/biography.html
@@ -4,6 +4,28 @@
  <meta charset='utf-8'>
  <title>Автобіографія Сабадоша Романа Святославовича</title>
  <style>
+     h1 { 
+    text-align: center;
+    font-size: 22px; 
+   }
+   .back{
+    font-style: italic;
+   }
+   .Zmist{
+    text-align: center;
+   }
+   h2 {
+       font-size: 1.2em;
+   }
+   article{
+    font-size: 1.2em;
+   }
+   .DoZmist{
+       font-weight: bold;
+   }
+   .up{
+       text-transform: uppercase;
+   }
    header a:link, header a:visited  {
     text-decoration: none;
     background-color: blue;
@@ -59,8 +81,8 @@ p.univ {
 </head>
 <body>
             <h1>Автобіографія Сабадоша Романа Святославовича</h1>
-                       <p> <a  href="index.html"> Назад на головну </a> </p>
-<h3 id ="Zmist">Зміст</h3>
+                       <p> <a  href="index.html" class="back"> Назад на головну </a> </p>
+<h3 class="Zmist"><id="Zmist">Зміст</h3>
 <header>
 <p> <a  href="#Base info"> Базова інформація </a> </p>
 <p> <a  href="#Childhood"> Дитинство </a> </p>
@@ -69,38 +91,38 @@ p.univ {
 <p> <a  href="#University"> Університет </a> </p>
 </header>
 
-
+<article>
 <h2 id ="Base info">1.Базова інформація</h2>
 
 <p class="info">Народився 1 грудня 2003 року, місто Коломия.</p>
 <p class="info">Ріст 176 см. Вага 55-60кг.</p>
 <p class="info">Закінчив Коломийську спеціалізовану школу №1 ім В.Стефаника.</p>
 <p class="info">Зараз навчається у Прикарпатському національному університеті ім. В. Стефаника</p>
-<p> <a  href="#Zmist"> До змісту </a> </p>
-
+<p> <a  href="#Zmist" class="DoZmist"> До змісту </a> </p></article>
+<article>
 <h2 id ="Childhood">2.Дитинство</h2>
 <p class="child">Ходив у дитячий садок, а пізніше у школу(Не знаю, що тут ше можна написати)</p>
-<p> <a  href="#Zmist"> До змісту </a> </p>
-
+<p> <a  href="#Zmist" class="DoZmist"> До змісту </a> </p></article>
+<article>
 <h2 id ="School years">3.Шкільні роки </h2>
 <p class="school">Навчався в Коломийській спеціалізованій школі номер 1 ім В.Стефаника.</p>
 <p class="school">Школа була з поглибленим вивченням іноземних мов, тому з дитинства любив вивчати англійську мову, і завдяки цьому зміг здобути багато різних нагород на олімпіадах</p>
 <p class="school">Під час навчання познайомився з різними людьми, які зіграли важливу роль в формуванні і зміні характеру, формуванні світогляду, тощо.</p>
-<p> <a  href="#Zmist"> До змісту </a> </p>
-
+<p> <a  href="#Zmist" class="DoZmist"> До змісту </a> </p></article>
+<article>
 <h2 id ="Free time">4.Поза школою</h2>
 <p class="free">Ходив на різні секції, починаючи від гімнастики, закінчуючи плаванням та танцями. Довго на них не затримувався, максимум пів року, бо доволі швидко втрачав інтерес.</p>
 <p class="free">Крім секцій доволі часто проводив час з друзями: гуляючи, або граючи в комп'ютерні ігри.</p>
-<p> <a  href="#Zmist"> До змісту </a> </p>
-
+<p> <a  href="#Zmist" class="DoZmist"> До змісту </a> </p></article>
+<article>
 <h2 id ="University">5.Університет</h2>
 <p class="univ">Університет
 Навчається у Прикарпатському національному університеті імені В. Стефаника у місті Івано-Франківськ.
 Поступив на спеціальність 122 "Комп'ютерні науки", та планує в майбутньому працювати по професії.</p>
-<p> <a  href="#Zmist"> До змісту </a> </p>
+<p> <a  href="#Zmist" class="DoZmist"> До змісту </a> </p></article>
 <hr align="center" width="100%" size="10"
 color="#000000" />
 
-<p><a href="#Zmist">Уверх</a></p>
+<p><a href="#Zmist" class="up">Уверх</a></p>
 </body>
  </html>
