--- a/pr4/friends.html
+++ b/pr4/friends.html
@@ -5,6 +5,24 @@
    <meta charset="utf-8">
  <title>Друзі Сабадоша Романа Святославовича</title>
  <style>
+   h1{
+     text-align: center;
+     font-size: 22px;
+   }
+.back{
+  font-style: italic;
+}
+h2{
+  text-align: center;
+}
+th{
+    background-color: green;
+    color: white;
+    font-weight: bold;
+}
+td td:nth-child(5){
+    text-align: right;
+}
 tr:nth-child(even){
   background-color: grey;
 }
@@ -21,7 +39,7 @@ tr{
 </head>
   <body>
 <h1>Друзі Сабадоша Романа Святославовича.</h1>
-<p><a href="index.html">Назад на головну</a></p>
+<p><a href="index.html" class="back">Назад на головну</a></p>
 <h2>Мої друзі</h2>
 <caption>Мої друзі</caption>
 <table>
