--- a/pr4/novadays.html
+++ b/pr4/novadays.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8"> 
 <title>Сьогодення Сабадоша Романа Святославовича</title>
 <style>
+ 
   ul li:nth-child(odd){
 background-color: grey;
 color:purple;
@@ -21,13 +22,26 @@ background-color: white;
   ol li:nth-child(4){
     background-color: lime;
   }
+  h1{
+    text-align: center;
+    font-size: 22px;
+  }
+.back{
+  font-style: italic;
+}
+.zakup{
+  text-align: center;
+}
+.fav{
+  text-align: center;
+}
 </style>
  </head>
 
 <body>
  <h1>Сьогодення Сабадоша Романа Святославовича.</h1>
-<p><a href="index.html">Назад на головну</a></p>
-<h2>Мій типовий список покупок:</h2>
+<p><a href="index.html" class="back">Назад на головну</a></p>
+<h2 class="zakup">Мій типовий список покупок:</h2>
 	<ul>
 <li>Молочні продукти:
 	<ul>
@@ -58,7 +72,7 @@ background-color: white;
  <li>Виноград</li>
 </li>
 </ul>
-<h2>Мій улюблений десерт - </h2> 
+<h2 class="fav">Мій улюблений десерт - </h2> 
 <p>Тірамісу</p>
 <p>Рецепт:</p>
 <ol><li>Підготувати все необхідне:
