--- a/pr4/gallery.html
+++ b/pr4/gallery.html
@@ -3,20 +3,48 @@
 <head>
  <meta charset="utf-8">
  <title>Галерея Сабадоша Романа Святославовича</title>
+ <style>
+     h1{
+         text-align: center;
+         font-size: 20px;
+     }
+.back{
+    font-style: italic;
+}
+h2{
+    text-align: center;
+}
+.imgs {
+    text-align: center;
+     font-size: 13.10400px; /*<розмір у мене в браузері 18.72. Тому я просто там рахував */
+}
+.imgsf {
+text-align: center;
+font-size: 24.33600px;
+}
+.imgso {
+text-align: center;
+font-size: 31.6368px;
+}
+.ima{
+    text-align: center;
+}
+
+ </style>
 </head>
 
 <body>
 
 <h1>Галерея Сабадоша Романа Святославовича.</h1>
-<p><a href="index.html">Назад на головну</a></p>
+<p><a href="index.html" class="back">Назад на головну</a></p>
 
 <h2>Мої зображення:</h2>
-<h3>Зображення у цій папці:</h3>
- <img src="640x480.jpg" alt="image1">
-<h3>Зображення у папці:</h3>
- <img src="images/480x480.png" alt="image2">
-<h3>Зображення онлайн:</h3>
-<img src="https://place-hold.it/1280x1024/black/pink/grey.gif&text=GoApex&fontsize=16" alt="image3">
+<h3 class="imgs">Зображення у цій папці:</h3>
+ <p class="ima"><img src="640x480.jpg"  alt="image1"></p>
+<h3 class="imgsf">Зображення у папці:</h3>
+ <p class="ima"><img  src="images/480x480.png"  alt="image2"></p>
+<h3 class="imgso">Зображення онлайн:</h3>
+<p class="ima"><img  src="https://place-hold.it/1280x1024/black/pink/grey.gif&text=GoApex&fontsize=16"  alt="image3"></p>
 
  </body>
 </html>
