--- a/pr4/index.html
+++ b/pr4/index.html
@@ -10,7 +10,7 @@
     font-size: 24px; 
    }
    p {
-       font-size: 19.2px;
+       font-size: 1.2em;
    }
 header p:nth-child(1) a:link, a:active  {
     color: green;   
